--- a/tasks/deploy.yml
+++ b/tasks/deploy.yml
@@ -3,14 +3,14 @@
   template:
     src: systemd_unit.j2
     dest: "/etc/systemd/system/{{ nodejs_app_name }}.service"
-  when: not is_docker
+  when: (not is_docker) and (nodejs_app_start_script)
 
 - name: Enable and/or restart systemd unit
   service:
     name: "{{ nodejs_app_name }}"
     enabled: yes
     state: restarted
-  when: not is_docker
+  when: (not is_docker) and (nodejs_app_start_script)
 
 - name: Create Supervisor config for Docker containers
   template:
@@ -19,4 +19,4 @@
     mode: 0644
     owner: root
     group: root
-  when: is_docker
+  when: (is_docker) and (nodejs_app_start_script)
