--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,9 @@
 # Node.js version required by application (supported versions: 0.10.36*, 0.10.40, 4.1.1)
 nodejs_version: 0.10.36
 
+# If a specific npm version is needed, specify it here
+#nodejs_npm_version: 2.14.5
+
 # List of additional RPM packages required by application
 nodejs_app_rpm_packages: []
 
