--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,7 +12,9 @@ nodejs_version: 0.10.36
 # List of additional RPM packages required by application
 nodejs_app_rpm_packages: []
 
-# List of additional NPM packages required by application
+# List of additional NPM packages required by application (to be installed globally)
+#
+# WARNING: This is NOT a substitute for listing dependencies in package.json!
 nodejs_app_npm_packages: []
 
 # MANDATORY
