use become when cloing

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -18,6 +18,8 @@
     dest: "{{ nodejs_app_install_dir | mandatory }}"
     version: "{{ nodejs_app_git_branch | mandatory }}"
     depth: 1
+  become: yes
+  become_user: "{{ nodejs_app_dev_username if is_vagrant else nodejs_app_username }}"
   when: nodejs_app_git_clone
 
 - name: Run application related commands with become if not under Docker
@@ -27,14 +29,7 @@
   with_items: "{{ nodejs_app_commands }}"
   become: yes
   become_user: "{{ nodejs_app_dev_username if is_vagrant else nodejs_app_username }}"
-  when: nodejs_app_commands and not is_docker
-
-- name: Run application related commands without become under Docker
-  command: "{{ item }}"
-  args:
-    chdir: "{{ nodejs_app_install_dir }}"
-  with_items: "{{ nodejs_app_commands }}"
-  when: nodejs_app_commands and is_docker
+  when: nodejs_app_commands
 
 - name: Set up VirtualBox Shared Folders npm workaround
   copy:
