--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -19,22 +19,38 @@
     version: "{{ nodejs_app_git_branch | mandatory }}"
     depth: 1
   when: nodejs_app_git_clone
-  
+
+# Begin Windows/npm path workaround of copying application directory contents to a path
+# not managed by VirtualBox Shared Folders or exposed to Windows. Run commands like
+# 'npm install' in the temporary directory and then copy the results back to the original
+# directory where processes like nodemon will see the changes.
+#
+# The issue itself is documented on the following page as "Step 3":
+# http://perrymitchell.net/article/npm-symlinks-through-vagrant-windows/
+- name: Copy application directory contents to temporary build directory if a Vagrant environment is being used
+  command: rsync -a --delete --exclude='.git/' --exclude='.vagrant/' "{{ nodejs_app_install_dir }}/" "{{ nodejs_app_tmp_build_dir }}/"
+  when: is_vagrant
+
+- name: Prevent npm from using symlinks
+  copy:
+    src: npmrc
+    dest: "/home/{{ nodejs_app_dev_username if is_vagrant else nodejs_app_username }}/.npmrc"
+    mode: 0644
+    owner: "{{ nodejs_app_dev_username if is_vagrant else nodejs_app_username }}"
+    group: "{{ nodejs_app_dev_groupname if is_vagrant else nodejs_app_groupname }}"
+  when: (is_vagrant) and (nodejs_app_commands)
+
 - name: Run application related commands
   command: "{{ item }}"
   args:
-    chdir: "{{ nodejs_app_install_dir }}"
+    chdir: "{{ nodejs_app_tmp_build_dir if is_vagrant else nodejs_app_install_dir }}"
   with_items: "{{ nodejs_app_commands }}"
   become: yes
   become_user: "{{ nodejs_app_dev_username if is_vagrant else nodejs_app_username }}"
   when: nodejs_app_commands
 
-- name: Set up VirtualBox Shared Folders npm workaround
-  copy:
-    src: npmrc
-    dest: "/home/{{ nodejs_app_dev_username if nodejs_app_dev_env else nodejs_app_username }}/.npmrc"
-    mode: 0644
-    owner: "{{ nodejs_app_dev_username if is_vagrant else nodejs_app_username }}"
-    group: "{{ nodejs_app_dev_groupname if is_vagrant else nodejs_app_groupname }}"
-  when: nodejs_app_dev_env
+- name: Copy build directory contents back to application directory if a Vagrant environment is being used
+  command: rsync -a "{{ nodejs_app_tmp_build_dir }}/" "{{ nodejs_app_install_dir }}/"
+  when: (is_vagrant) and (nodejs_app_commands)
+# End Windows/npm path workaround
 
