--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -34,10 +34,10 @@
 - name: Prevent npm from using symlinks
   copy:
     src: npmrc
-    dest: "/home/{{ nodejs_app_dev_username if is_vagrant else nodejs_app_username }}/.npmrc"
+    dest: "/home/{{ nodejs_app_dev_username }}/.npmrc"
     mode: 0644
-    owner: "{{ nodejs_app_dev_username if is_vagrant else nodejs_app_username }}"
-    group: "{{ nodejs_app_dev_groupname if is_vagrant else nodejs_app_groupname }}"
+    owner: "{{ nodejs_app_dev_username }}"
+    group: "{{ nodejs_app_dev_groupname }}"
   when: (is_vagrant) and (nodejs_app_commands)
 
 - name: Run application related commands
