--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -67,7 +67,11 @@ nodejs_app_monitor_file_extensions:
   - js
   - json
 
-# A TCP port used by the application.
+# A TCP port used by the application. This value will be made available using an
+# environment variable. The variable will be called NODEJS_APP_NAME_TCP_PORT, except
+# the 'nodejs_app_name' value provided will be used. For example, if 'nodejs_app_name'
+# is set to 'foo-bar' then a FOO_BAR_TCP_PORT environment variable will be available
+# for the application to use.
 # Example: 8080
 nodejs_app_tcp_port: ''
 
