Per @gtirloni's comment, leave enable/restart of systemd unit as a task

--- a/tasks/deploy.yml
+++ b/tasks/deploy.yml
@@ -6,7 +6,13 @@
   when: (not is_docker) and (nodejs_app_start_script)
   notify:
     - reload systemd
-    - Enable and/or restart systemd unit
+
+- name: Enable and/or restart systemd unit
+  service:
+    name: "{{ nodejs_app_name }}"
+    enabled: yes
+    state: restarted
+  when: (not is_docker) and (nodejs_app_start_script)    
 
 - name: Create Supervisor config for Docker containers
   template:
