--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,8 +3,8 @@
 # set. Variables with values provided can be used as-is unless there is a reason
 # to override them.
 
-# Node.js version required by application (supported versions: 0.10.36*, 0.10.40, 4.2.0, 4.2.1)
-nodejs_version: 0.10.36
+# Node.js version required by application (see vars/RedHat.yml for supported versions)
+nodejs_version: 0.10.41
 
 # If a specific npm version is needed, specify it here
 #nodejs_npm_version: 2.14.5
