--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,9 @@
 # Node.js version required by application (see vars/RedHat.yml for supported versions)
 nodejs_version: 0.10.41
 
+# Additional options passed to the node executable (see node(1) man page)
+nodejs_options: ''
+
 # If a specific npm version is needed, specify it here
 #nodejs_npm_version: 2.14.5
 
