--- a/tasks/deploy.yml
+++ b/tasks/deploy.yml
@@ -22,3 +22,38 @@
     owner: root
     group: root
   when: (is_docker) and (nodejs_app_start_script)
+
+- block:
+
+    - name: Copy Flow Manager configuration file to temporary location in a Vagrant environment
+      command: cp '{{ item.src }}' '/tmp/{{ item.src | basename }}'
+      with_items:
+        - "{{ nodejs_app_config_files }}"
+
+    - name: Replace the production Preferences Server's address with a user provided one
+      replace:
+        dest: '/tmp/{{ item.0.src | basename }}'
+        regexp: '{{ item.1.regexp }}'
+        replace: '{{ item.1.replace }}'
+      notify: Restart the application systemd unit
+      with_subelements:
+        - "{{ nodejs_app_config_files }}"
+        - changes
+
+    - name: Move Flow Manager configuration file back to original location in a Vagrant environment
+      command: mv '/tmp/{{ item.src | basename }}' '{{ item.src }}'
+      with_items:
+        - "{{ nodejs_app_config_files }}"
+
+  when: is_vagrant
+
+# If VirtualBox Shared Folders on Windows aren't being used then modify files directly.
+- name: Replace the production Preferences Server's address with a user provided one
+  replace:
+    dest: '{{ item.0.src }}'
+    regexp: '{{ item.1.regexp }}'
+    replace: '{{ item.1.replace }}'
+  notify: Restart the application systemd unit
+  with_subelements:
+    - "{{ nodejs_app_config_files }}"
+    - changes
