--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,11 @@ nodejs_branch: lts
 # If a specific npm version is needed, specify it here
 #nodejs_npm_version: 2.14.5
 
+# If NPM should use symlinks or not. This is necessary to work around issues in
+# NPM when using VirtualBox shared folders on a Windows host. It might be disabled
+# on other platforms (Linux/OSX) if desired.
+nodejs_npm_symlinks: false
+
 # List of additional RPM packages required by application
 nodejs_app_rpm_packages: []
 
