--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -55,7 +55,7 @@
     mode: 0644
     owner: "{{ nodejs_app_dev_username }}"
     group: "{{ nodejs_app_dev_groupname }}"
-  when: (is_vagrant) and (nodejs_app_commands) and not (nodejs_npm_symlinks)
+  when: (is_vagrant) and (nodejs_app_commands)
 
 - name: Run application related commands as the application user
   command: "{{ item }}"
