--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -40,7 +40,17 @@
     group: '{{ nodejs_app_dev_username }}'
     state: directory
     mode: '0775'
-  when: is_vagrant
+  when: (is_vagrant) and (nodejs_app_shadow_node_modules)
+
+- name: Ensure the application's node_module directory exists
+  file:
+    path: '{{ nodejs_app_install_dir }}/node_modules'
+    owner: '{{ nodejs_app_dev_username }}'
+    group: '{{ nodejs_app_dev_username }}'
+    state: directory
+    mode: '0775'
+  when: (is_vagrant) and (nodejs_app_shadow_node_modules)
+
 
 - name: Bind mount application's node_modules
   mount:
@@ -49,7 +59,7 @@
     fstype: none
     opts: bind
     state: mounted
-  when: is_vagrant
+  when: (is_vagrant) and (nodejs_app_shadow_node_modules)
 
 - name: Run application related commands as the application user
   command: "{{ item }}"
