--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,9 @@ nodejs_branch: lts
 # If a specific npm version is needed, specify it here
 #nodejs_npm_version: 2.14.5
 
+# Enable Yarn package manager
+nodejs_yarn_enabled: true
+
 # List of additional RPM packages required by application
 nodejs_app_rpm_packages: []
 
